@@ -1,4 +1,5 @@
 * enhancements
+  * Added DataMapper support
   * Remove store_location from authenticatable strategy and add it to failure app
   * Allow a strategy to be placed after authenticatable
   * [#45] Do not rely attribute? methods, since they are not added on Datamapper
